Update different versions of connector naming

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -141,17 +141,17 @@ Most of the features are linked to product specific issues. Please have a look o
 
 :::note
 
-- The product `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20milestone%3A25.09%20%22Release%20Checks%22) for each product have been updated to reflect the new versions of the components included in this release. Please refer to these issues for detailed information on the updates.
-- The KITs `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20label%3Akit%20%22Release%20Checks%22%20milestone%3A25.09) were also updated.
+- The product `Release Checks` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20milestone%3A25.09%20%22Release%20Checks%22) for each product have been updated to reflect the new versions of the components included in this release. Please refer to these issues for detailed information on the updates.
+- The KITs `Release Checks` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20label%3Akit%20%22Release%20Checks%22%20milestone%3A25.09) were also updated.
 
 :::
 
 | Component                                                                                                                                             |                                                                                             Helm Chart (s)                                                                                              |                                                                                                                                                                                        App-/KIT Version (s)                                                                                                                                                                                        |
-|:------------------------------------------------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
+|-------------------------------------------------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
 | [Business Partner KIT]( https://eclipse-tractusx.github.io/docs-kits/next/category/business-partner-kit)                                              |                                                                                                   n/a                                                                                                   |                                                                                                                                          [X.0.0](https://eclipse-tractusx.github.io/docs-kits/next/kits/business-partner-kit/changelog/#900---2025-06-16)                                                                                                                                          |
 | [BPN DID Resolution Service (BDRS)](https://github.com/eclipse-tractusx/bpn-did-resolution-service)                                                   |                                                    bdrs: [0.5.7](https://github.com/eclipse-tractusx/bpn-did-resolution-service/releases/tag/0.5.7)                                                     |                                                                                                                                                     [0.5.7](https://github.com/eclipse-tractusx/bpn-did-resolution-service/releases/tag/0.5.7)                                                                                                                                                     |
 | [Digital Twin Registry](https://github.com/eclipse-tractusx/sldt-digital-twin-registry)                                                               |                                 digital-twin-registry:[0.9.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/digital-twin-registry-0.9.0)                                  |                                                                                                                                                    [0.9.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.9.0)                                                                                                                                                     |
-| [Eclipse Data Space Connector (Tractus-X EDC)](https://github.com/eclipse-tractusx/tractusx-edc)                                                      |                                                   tractusx-connector: [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)                                                    |                                                                                                                                                           [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)                                                                                                                                                           |
+| [Tractus-X Connector (**E**clipse **D**ataspace **C**omponents Connector)](https://github.com/eclipse-tractusx/tractusx-edc)                          |                                                   tractusx-connector: [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)                                                    |                                                                                                                                                           [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)                                                                                                                                                           |
 | [Golden Record Business Partner Number (BPN) Service](https://github.com/eclipse-tractusx/bpdm)                                                       |                                                             bpdm: [6.1.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/bpdm-6.1.0)                                                             |                                                                                                                                                               [7.1.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/v7.1.0)                                                                                                                                                                |
 | [Identity and Access Management (IAM)](https://github.com/eclipse-tractusx/portal-iam)                                                                | centralidp: [4.2.1](https://github.com/eclipse-tractusx/portal-iam/releases/tag/centralidp-4.2.1) <br/> sharedidp: [4.2.1](https://github.com/eclipse-tractusx/portal-iam/releases/tag/sharedidp-4.2.1) |                                                                                                                                                 keycloak: [25.0.6](https://www.keycloak.org/docs/latest/release_notes/index.html#keycloak-25-0-0)                                                                                                                                                  |
 | [Industry Core Hub](https://github.com/eclipse-tractusx/industry-core-hub)                                                                            |                                          industry-core-hub:[0.3.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/industry-core-hub-0.3.0)                                          |                                                                                                                                                        [v0.2.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/v0.2.0)                                                                                                                                                         |
@@ -170,9 +170,10 @@ Most of the features are linked to product specific issues. Please have a look o
 - For E2E Testing, the [2.2.3](https://github.com/SAP/ssi-dim-middle-layer/releases/tag/v2.2.3) of the [SSI DIM Middle Layer](https://github.com/SAP/ssi-dim-middle-layer) was used - this component is FOSS but the currently used wallet (see previous item) is not
 
 #### Industry Core Hub
+
 - RLock is blocking other API calls (when negotiation is not successful at the Discovery: [industry-core-hub#334](https://github.com/eclipse-tractusx/industry-core-hub/issues/334)
 - Trivy scan fails to complete successfully because of alpine version:  [industry-core-hub#319](https://github.com/eclipse-tractusx/industry-core-hub/issues/319)
-- When the EDC connector restarts, the EDC assets are not recreated for the already available twins: [industry-core-hub#318](https://github.com/eclipse-tractusx/industry-core-hub/issues/318)
+- When the Tractus-X Connector restarts, the Connector assets are not recreated for the already available twins: [industry-core-hub#318](https://github.com/eclipse-tractusx/industry-core-hub/issues/318)
 - **Incompatible with Tractus-X Connector `0.11.x:` (additional)**
   - Not compliant to CX-0018, due to **NOT** evaluating the dspace endpoint.
   - Not compliant to CX-0152, due to **NOT** implementing the new odrl profile.
@@ -190,7 +191,7 @@ Most of the features are linked to product specific issues. Please have a look o
 
 #### Tractus-X SDK
 
-- Compatibility with EDC 0.11.x (Saturn) not tested completely: [tractusx-sdk#159](https://github.com/eclipse-tractusx/tractusx-sdk/issues/159)
+- Compatibility with Tractus-X Connector 0.11.x (Saturn) not tested completely: [tractusx-sdk#159](https://github.com/eclipse-tractusx/tractusx-sdk/issues/159)
   - The Saturn APIs were implemented but were not able to be tested because of different bugs found at the connector and due to missing documentation on how to adopt it.
 
 ### Runtime
@@ -200,12 +201,12 @@ The following runtime has been used during end-to-end test:
 - [Kubernetes](https://en.wikipedia.org/wiki/Kubernetes) version: `1.29.10`
 - Applications used
   - [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) version: `15.4.0` or more specifically `15.4.0-debian-11-r45`
-  - EDC version [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)
+  - Tractus-X Connector version [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)
   - DTR version [0.9.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.9.0)
 
 :::note
 
-Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+Tractus-X Connector has been tested on both Postgresql versions: 15.x and 16.x
 
 :::
 
