--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -1,13 +1,13 @@
 ---
 title: "25.09"
-date: 2025-09-29
+date: 2025-09-30
 slug: release-25-09
 description: "Highlights and changes for Tractus-X Release 25.09."
 tags: [release, changelog]
 hide_table_of_contents: false
 ---
 
-## [25.09] - 2025-09-29
+## [25.09] - 2025-09-30
 
 Our community and results/releases depends on our contributors. **We want to thank everyone who has contributed** to this release by reporting issues, discussing solutions, writing code, or reviewing contributions.
 
@@ -169,6 +169,20 @@ Most of the features are linked to product specific issues. Please have a look o
 - The Eclipse Tractus-X release does not include an Identity Wallet. The development team decided on a temporary bridging solution, based on a commercial application, to test and ship the releases 24.08, 24.12, 25.03, 25.06 and 25.09. Without implementing this interim solution, participants will not be able to fully utilize this release in consequence.
 - For E2E Testing, the [2.2.3](https://github.com/SAP/ssi-dim-middle-layer/releases/tag/v2.2.3) of the [SSI DIM Middle Layer](https://github.com/SAP/ssi-dim-middle-layer) was used - this component is FOSS but the currently used wallet (see previous item) is not
 
+#### BPDM
+
+- When creating a marketplace app the Portal does not support an internal technical user profile for BPDM permission group [Gate Input Consumer](https://github.com/eclipse-tractusx/bpdm/blob/main/docs/architecture/08_Crosscutting_Concepts.md). Therefore, it is currently not possible to create a marketplace app that enables access to [ReadAccessGateInputForSharingMember offers](https://github.com/eclipse-tractusx/bpdm/blob/main/INSTALL.md#edc-installation) for external VAT services wanting to access sharing member Gates
+- For the new Tractus-X Connector 0.11 the golden record process was only tested on the 3rd release candidate, not the actual released version. There were no backwards compatibility tests between older Tractus-X Connector versions and the new Tractus-X Connector 0.11.
+- BPDM currently only offers documentation on how to use the Tractus-X Connector 0.11 over DCP 1.0. There are no tutorials for DCP 0.8 available.
+
+#### Tractus-X Connector
+
+- Beware of the changes in the acceptable policies, which inflict breaking changes required by services that create new policies -- see migration guide for more information.
+- Policy right operands given as array are not returned as specified, they work, but the returned right operand is a string representation of the json object([#2221](https://github.com/eclipse-tractusx/tractusx-edc/issues/2221))
+- DCP implementation uses a wrong property name. SAP DIM is capable to deal with the wrong property name ([#2255](https://github.com/eclipse-tractusx/tractusx-edc/issues/2255))
+  -Application of policies that can be ensured automatically not complete ([#2259](https://github.com/eclipse-tractusx/tractusx-edc/issues/2259))
+- There is a complex issue about the compatibility of policies with dsp versions, especially regarding backward compatibility ([#2288](https://github.com/eclipse-tractusx/tractusx-edc/issues/2288)). The issue requires further investigation which we will execute to separate misbehavior from documentation issues.
+
 #### Industry Core Hub
 
 - RLock is blocking other API calls (when negotiation is not successful at the Discovery: [industry-core-hub#334](https://github.com/eclipse-tractusx/industry-core-hub/issues/334)
@@ -183,7 +197,7 @@ Most of the features are linked to product specific issues. Please have a look o
 
 - Data Assets and DTR not covered in migrations
 - Data Sovereignty is not transparent to end-users
-- Catalog and Neogtiations have bad user experience (no actions, no filters)
+- Catalog and Negotiations have bad user experience (no actions, no filters)
 - **Incompatible with Tractus-X Connector `0.11.x:` (additional)**
   - Not tested with Tractus-X Connector in version `0.11.x`
   - Not compliant to CX-0018, due to **NOT** evaluating the dspace endpoint.
