Corrects grammar and clarifies Bitnami update

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -185,7 +185,7 @@ Most of the features are linked to product specific issues. Please have a look o
 
 #### Industry Core Hub
 
-- RLock is blocking other API calls (when negotiation is not successful at the Discovery: [industry-core-hub#334](https://github.com/eclipse-tractusx/industry-core-hub/issues/334)
+- RLock is blocking other API calls when negotiation is not successful at the Discovery: [industry-core-hub#334](https://github.com/eclipse-tractusx/industry-core-hub/issues/334)
 - Trivy scan fails to complete successfully because of alpine version:  [industry-core-hub#319](https://github.com/eclipse-tractusx/industry-core-hub/issues/319)
 - When the Tractus-X Connector restarts, the Connector assets are not recreated for the already available twins: [industry-core-hub#318](https://github.com/eclipse-tractusx/industry-core-hub/issues/318)
 - **Incompatible with Tractus-X Connector `0.11.x:` (additional)**
@@ -236,7 +236,7 @@ helm search repo tractusx-dev --versions
 
 ### Bitnami changes
 
-The official Bitnami Helm chart repository has been deprecated or is no longer maintained in its previous location. Bitnami has migrated legacy 
+The official Bitnami Helm chart repository has been deprecated or is no longer maintained in its previous location. Bitnami has migrated legacy
 container images to a new repository called `bitnamilegacy`. Helm charts using Bitnami container images must be updated to reference this new source
 to ensure continued functionality. With `bitnamilegacy` we won’t receive security updates.
 
